--- a/otplike/euroclojure2017/index.html
+++ b/otplike/euroclojure2017/index.html
@@ -11,32 +11,29 @@
 	</head>
 	<body>
 		<a id="sup_logo" target="_blank" href="http://www.suprematic.net" >
-			<img src="img/red_square.jpg" width="80" height="80">
+			<img src="img/red_square.jpg" width="80" height="80" alt="SUPREMATIC">
 		</a>
-
-		<div >
-		</div>
 
 		<div class="reveal">
 			<div class="slides">
 				<section data-markdown><textarea data-template>
 					<br>
-					## otplike – Erlang/OTP processes and behaviours for Clojure  
+					## otplike – Erlang/OTP processes and behaviours for Clojure
 					</br>
 
-					 ### Alexey Aristov, __SUPREMATIC__
+					### Alexey Aristov, __SUPREMATIC__
 
 					<br>
 
-					 ## EuroClojure 2017
-					 ## Berlin, Germany
+					## EuroClojure 2017
+					## Berlin, Germany
 
 				</textarea></section>
 
 				<section data-markdown><textarea data-template>
 					### _core.async_ recap
-						
-					* Foundation for async programs in Clojure and ClojureScript 
+
+					* Foundation for async programs in Clojure and ClojureScript
 					* Go Blocks (lightweight processes) <!-- .element: class="fragment"-->
 					* Channels <!-- .element: class="fragment"-->
 					* Useful primitives (i.e. alt, mult/tap/untap, pub/sub/unsub) <!-- .element: class="fragment"-->
@@ -53,8 +50,8 @@
 
 						```clojure
 						(go-loop
-						   (>! chan {:some-data (prepare-data)})
-						   (recur))
+						  (>! chan {:some-data (prepare-data)})
+						  (recur))
 						   &nbsp;
 						```
 					</textarea></div>
@@ -62,12 +59,12 @@
 					<div id="right" data-markdown><textarea data-template style="min-height: 5em" >
 						Consumer <!-- .element: style="text-align: left;"-->
 
-						```clojure 
+						```clojure
 						(go-loop
-						   (when-let [data (<&excl; chan)]
-						     (process data)
-						     (recur))
-						``` 
+						  (when-let [data (<&excl; chan)]
+						    (process data)
+						    (recur))
+						```
 					</textarea></div>
 
 					<div data-markdown><textarea data-template>
@@ -94,7 +91,7 @@
 							{From, N} ->
 								From ! fact(N),
 							factorial_server()
-						end. 
+						end.
 					</code></pre>
 				</textarea></section>
 
@@ -124,7 +121,7 @@
 
 					```clojure
 					(ns hello-process
-					  (:require [otplike.process :as process :refer [! proc-defn receive!]]))	
+					  (:require [otplike.process :as process :refer [! proc-defn receive!]]))
 
 					(proc-defn hello-world []
 					  (receive!
@@ -154,13 +151,13 @@
 					      (recur))))
 					```
 
-					* Pattern matching with core.match. 
+					* Pattern matching with core.match.
 					* Crash if no matching pattern available. <!-- .element: class="fragment"-->
 					* Timeout handling with receive. <!-- .element: class="fragment"-->
 				</textarea></section>
 
 				<section data-markdown><textarea data-template>
-					### otplike / process - Linking 
+					### otplike / process - Linking
 
 					* Special connection between processes.
 					* When one of two processes exits, another also exits.
@@ -173,19 +170,19 @@
 				</textarea></section>
 
 				<section data-markdown><textarea data-template>
-					### otplike / process - Linking 
+					### otplike / process - Linking
 					```clojure
 					(proc-defn process2 []
 					  (receive!
-					    [:message m]
+					    [:message message]
 					    (println message))
 					  (recur))
 
 					(proc-defn process1 []
 					  (let [p2 (process/spawn-link process2)]
-					    (receive 
-					      m
-					      (! p2 m))
+					    (receive!
+					      message
+					      (! p2 message))
 					    (recur)))
 
 					(let [p1 (process/spawn process1)]
@@ -222,7 +219,7 @@
 				</textarea></section>
 
 
-			
+
 
 				<section data-markdown><textarea data-template>
 					### otplike / _gen-server_ introduction
@@ -250,7 +247,7 @@
 					(defn handle-call [message from state]
 						[:reply :ok state])
 
-					; handle async requests	
+					; handle async requests
 					(defn handle-cast [message state]
 						[:noreply state])
 					```
@@ -272,12 +269,12 @@
 
 					; handle sync requests
 					(defn handle-call [message from state]
-					  (match message 
+					  (match message
 					    [::add a1 a2]
 					    [:reply (+ a1 a2) state]))
 
 					(defn add [server a1 a2]
-					  (gs/call server [::add a1 a2]))  	
+					  (gs/call server [::add a1 a2]))
 
 					(let [[_ server] (gs/start-ns [])]
 					  (println "2 + 3 = " (add server 2 3)))
@@ -286,14 +283,14 @@
 
 
 				<section data-markdown><textarea data-template>
-					### otplike /  _gen-server_ 
+					### otplike /  _gen-server_
 
 					```clojure
 					(defn init [some args]
 					   [:ok {::count 0}])
 
 					(defn handle-call [message from state]
-					  (match message 
+					  (match message
 					    [::add a1 a2]
 					    [:reply (+ a1 a2) (update-in state [::count] inc)]
 
@@ -304,9 +301,9 @@
 					  (gs/call ::my-service [::add a1 a2]))
 
 					(defn get-count [a1 a2]
-					  (gs/call ::my-service ::count))  	
+					  (gs/call ::my-service ::count))
 
-					(gs/start-ns ::my-service [] {}) 
+					(gs/start-ns ::my-service [] {})
 					(println "2 + 3 = " (add 2 3) " / execution count: " (get-count))
 					```
 				</textarea></section>
@@ -315,7 +312,7 @@
 				<section data-markdown><textarea data-template>
 					### otplike / Supervisors
 
-					* responsible for starting gen-servers. 
+					* responsible for starting gen-servers.
 					* re-starts them in case they will crash. <!-- .element: class="fragment"-->
 					* supervisor is a special gen-server. <!-- .element: class="fragment" -->
 					* has start specifications (id, start function and arguments). <!-- .element: class="fragment"-->
@@ -376,7 +373,7 @@
 
 				<section data-markdown><textarea data-template>
 					### Links and Information
-					
+
 					* otplike - [https://github.com/suprematic/otplike](https://github.com/suprematic/otplike)
 					* Erlang/OTP - [http://learnyousomeerlang.com/content](http://learnyousomeerlang.com/content)
 					  * pictures used in this presentation are borrowed from it
@@ -399,7 +396,7 @@
 						(loop []
 						  (receive!
 						    :light-on
-						    (do 
+						    (do
 						       (interface/light-on!)
 						       (timer/send-after 1000 :light-off))
 
@@ -427,9 +424,9 @@
 				slideNumber: 'c/t',
 
 				keyboard: {
-   				 33: 'next', 
-    		  	 34: 'prev' 
-                },
+					33: 'next',
+					34: 'prev'
+				},
 
 				dependencies: [
 					{ src: 'bower_components/reveal.js/plugin/highlight/highlight.js', callback: function() { hljs.initHighlightingOnLoad();}},
@@ -440,6 +437,3 @@
 		</script>
 	</body>
 </html>
-
-
-			
